final fix: sidebar shwos on mobile

--- a/src/Components/Dashboard/Dashboard.css
+++ b/src/Components/Dashboard/Dashboard.css
@@ -255,12 +255,16 @@
         position: absolute;
         top: 100%;
         height: 100vh;
-        left: 0;
+        left: -100%;
         flex-direction: column;
         background-color: var(--brand);
         padding-top: 24px;
         padding-left: 0px;
         padding-right: 24px;
+    }
+
+    .show {
+        left: 0;
     }
 
     .nav-link {
